# file-upload-task

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  api.DockerFile  docker-compose.yml  pyproject.toml  requirements.txt  worker.DockerFile
app/: celery.py  config.py  main.py  tasks.py
app/api/v1/: jobs.py  schemas.py
app/database/: models.py  session.py
app/services/: file_conversion_and_zipping.py  file_upload.py  generate_s3_url.py
database_migrations/: env.py
database_migrations/versions/: 7371e062f2ae_add_output_path_in_fileconversion.py  7fe081fb5101_initial_migration_creating_jobs_and_.py
tests/: test_jobs_api.py
