[tool.poetry]
name = "file-upload-task"
version = "0.1.0"
description = ""
authors = ["Rishav <rishishah907@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
