[tool.poetry]
name = "file-upload-task"
version = "0.1.0"
description = ""
authors = ["Rishav <rishishah907@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"
celery = {extras = ["redis"], version = "^5.5.3"}
alembic = "^1.16.4"
psycopg2-binary = "^2.9.10"
boto3 = "^1.39.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
